update card and add form

--- a/UxContestSingle.html
+++ b/UxContestSingle.html
@@ -19,64 +19,64 @@
     <div class="text-4xl lg:text-6xl text-[#2274AC] font-bold mx-4 lg:mx-8 ">App Design</div>
 
     <section class="lg:flex flex-row lg:ml-8 mt-8">
-        <div class="flex  mx-4">
+        <div class="flex w-full lg:w-[25%] mx-4">
             <img src="images/Ui_UxContest_Sec2_icon1.svg" alt="">
-           <p class="text-[#37474F] text-3xl pt-2 mx-4">Online</p>
+           <p class="text-[#37474F] text-xl pt-2 mx-4">Online</p>
         </div>
         <div class="flex mx-4 w-full lg:w-[25%] mx-4 mt-4 lg:mt-0">
             <img src="images/Ui_UxContest_Sec2_icon2.svg" alt="">
-           <p class="text-[#37474F] text-3xl pt-2 mx-4">1000 participants</p>
+           <p class="text-[#37474F] text-xl pt-2 mx-4">1000 participants</p>
         </div>
         <div class="flex mx-4 w-full lg:w-[25%] mx-4 mt-4 lg:mt-0">
             <img src="images/Ui_UxContest_Sec2_icon4.svg" alt="">
-           <p class="text-[#37474F] text-3xl pt-2 mx-4">Eligibility : All</p>
+           <p class="text-[#37474F] text-xl pt-2 mx-4">Eligibility : All</p>
         </div>
         <div class="flex mx-4 w-full lg:w-[25%] mx-4 mt-4 lg:mt-0">
             <img src="images/Ui_UxContest_Sec2_icon4.svg" alt="">
-           <p class="text-[#37474F] text-3xl pt-2 mx-4">100 Registered</p>
+           <p class="text-[#37474F] text-xl pt-2 mx-4">200 Registered</p>
         </div>
     </section>  
 
     <div class="flex justify-center mx-auto mt-8 lg:mt-12">
-        <button class="bg-[#275473] text-white text-2xl py-2 px-8 rounded-full">Register Now</button>
+      <a href="Contest_form.html"><button class="bg-[#275473] text-white text-2xl py-2 px-8 rounded-full">Register Now</button></a>  
      </div>
-     <p class="text-[#275473] text-center text-2xl mt-4 lg:mt-12">UI/UX contest participation fees <b>Rs. 150</b> </p>
+     <p class="text-[#FFB656] text-center text-4xl font-extrabold mt-4 lg:mt-12">UI/UX contest participation fees <b>Rs. 250</b> </p>
 
     <!--Section 3--> 
     <div class="lg:flex flex-row mx-4 lg:ml-12 mt-12">
         <div class="w-full lg:w-[33%] h-auto flex lg:mt-0 mt-4">
          <div><img src="images/Ui_UxContest_Sec3_Card1.svg" alt=""></div> 
          <div class="mx-4 my-2">
-            <p class="text-[#37474F] text-xl lg:text-2xl"> Registration Deadline</p>
-            <p class="text-[#8A8A8A] text-xl mt-2">7 days left</p>
+            <p class="text-[#37474F] text-xl"> Registration Deadline</p>
+            <p class="text-[#8A8A8A] text-lg mt-2">7 days left</p>
         </div> 
         </div>
 
         <div class="w-full lg:w-[33%] h-auto flex lg:mt-0 mt-4">
-            <div><img src="images/Ui_UxContest_Sec3_Card1.svg" alt=""></div> 
+            <div><img src="images/Ui_UxContest_Sec3_Card2.svg" alt=""></div> 
             <div class="mx-4 my-2">
-               <p class="text-[#37474F] text-xl lg:text-2xl"> Impressions</p>
-               <p class="text-[#8A8A8A] text-xl mt-2">2,666</p>
+               <p class="text-[#37474F] text-xl"> Impressions</p>
+               <p class="text-[#8A8A8A] text-lg mt-2">2,666</p>
            </div> 
            </div>
 
            <div class="w-full lg:w-[33%] h-auto flex lg:mt-0 mt-4">
-            <div><img src="images/Ui_UxContest_Sec3_Card1.svg" alt=""></div> 
+            <div><img src="images/Ui_UxContest_Sec3_Card3.svg" alt=""></div> 
             <div class="mx-4 my-2">
-               <p class="text-[#37474F] text-xl lg:text-2xl">Participation</p>
-               <p class="text-[#8A8A8A] text-xl mt-2">Individual</p>
+               <p class="text-[#37474F] text-xl">Participation</p>
+               <p class="text-[#8A8A8A] text-lg mt-2">Individual</p>
            </div> 
            </div>
     </div>
 
     <!---Section 4-->
     <div class="mx-4 mt-12 lg:mx-8 text-xl lg:text-5xl text-[#2274AC] font-bold">All that you need to know about UI/UX Contest</div>
-    <p class="mx-4 lg:mx-8 text-2xl lg:text-lg text-[#8A8A8A] mt-4">Get ready to unleash your creativity in —the UI/UX Contest, hosted by the Entrepreneurship Cell (E-Cell) at IIIT Bhagalpur in collaboration with Zuno.UI/UX design is the heart and soul of successful startups, and this contest is your chance to showcase your skills and win exciting prizes. With a prize pool worth 2 lakhs, this is an opportunity you don't want to miss!  <br>
+    <p class="mx-4 lg:mx-8 text-2xl lg:text-lg text-[#8A8A8A] mt-4">Get ready to unleash your creativity in the UI/UX Contest, hosted by the Entrepreneurship Cell (E-Cell) at IIIT Bhagalpur in collaboration with Zuno.UI/UX design is the heart and soul of successful startups, and this contest is your chance to showcase your skills and win exciting prizes. With a prize pool worth 2 lakhs, this is an opportunity you don't want to miss!  <br>
         Join this UI/UX contest to showcase your design skills and win amazing prizes! This is a unique opportunity to gain recognition and take your design skills to the next level!</p>
 
      <!--Section 5--> 
      <div class="mx-4 lg:mx-8  mt-12">
-        <div class="text-[#8A8A8A] text-xl lg:text-4xl"> <a class="text-[#2274AC] font-semibold">Content Duration :</a>   22 May- 2 June 2023
+        <div class="text-[#8A8A8A] text-xl lg:text-2xl"> <a class="text-[#2274AC]  text-xl lg:text-4xl font-semibold">Content Duration :</a>   22 Nov- 22 Dec 2023
         </div>
 
      </div>
@@ -86,34 +86,34 @@
     </div>
     
        <div class="mx-4 lg:mx-8  mt-12">
-        <div class="text-[#8A8A8A] text-xl lg:text-4xl"> <a class="text-[#2274AC] font-semibold">Content Task:</a>  Design a visually appealing and user-friendly homepage for https://www.foundit.in
+        <div class="text-[#8A8A8A] text-xl lg:text-2xl"> <a class="text-[#2274AC] text-xl lg:text-4xl font-semibold">Content Task:</a>  Design a visually appealing and user-friendly homepage for https://www.foundit.in 
         </div>
      </div>
 
     <!--Section 6-->
     <div class="mx-4 lg:mx-8  mt-12">
-        <div class="text-[#2274AC] text-2xl lg:text-4xl "> Submission Format :  </div>
-        <ul class="list-disc text-[#8A8A8A] text-xl lg:text-2xl mx-4 lg:mx-8 mt-4 lg:mt-8">
+        <div class="text-[#2274AC] text-xl lg:text-4xl font-semibold "> Submission Format :  </div>
+        <ul class="list-disc text-[#8A8A8A] text-xl mx-4 lg:mx-8 mt-4 lg:mt-8">
             <li>Figma (link), Sketch(link), PDF, .psd, .png, .jpeg, adobe XD(link)</li>
             <li class="mt-4">Upload your files with a maximum size of 5 MB.</li>
         </ul>
      </div>
 
      <div class="mx-4 lg:mx-8  mt-12">
-        <div class="text-[#2274AC] text-2xl lg:text-4xl "> Evaluation Criteria  :  </div>
-        <ul class="list-disc text-[#8A8A8A] text-xl lg:text-2xl mx-4 lg:mx-8 mt-4 lg:mt-8">
-            <li>To create an effective landing page with clear messaging of benefits, a simple layout for easy navigation, and visual design that aligns with the brand and creates credibility.</li>
-            <li class="mt-4">You will be judged on the basis of a few of these criterias like creativity & originality, user experience & functionality, visual design and aesthetics.</li>
+        <div class="text-[#2274AC] text-2xl lg:text-4xl font-semibold "> Evaluation Criteria  :  </div>
+        <ul class="list-disc text-[#8A8A8A] text-xl  mx-4 lg:mx-8 mt-4 lg:mt-8">
+            <li>To create an effective landing page with clear messaging of benefits, a simple layout for easy navigation, and must be visual design that aligns with the brand and creates credibility.</li>
+            <li class="mt-4">You will be judged on the basis of a few of these criteria like creativity & originality, user experience & functionality, visual design and aesthetics.</li>
         </ul>
      </div>
 
      <div class="mx-4 lg:mx-8  mt-12">
-        <div class="text-[#2274AC] text-2xl lg:text-4xl ">Deliverables :  </div>
-        <ul class="list-disc text-[#8A8A8A] text-xl lg:text-2xl mx-4 lg:mx-8 mt-4 lg:mt-8">
-            <li>A high-fidelity design mockup of the homepage should be designed in Figma</li>
-            <li class="mt-4">A brief explanation of the design choices and rationale behind the design</li>
-            <li class="mt-4">A description of how the design meets the requirements outlined in the brief</li>
-            <li class="mt-4">Please use the Content on the current homepage as placeholders</li>
+        <div class="text-[#2274AC] text-2xl lg:text-4xl font-semibold">Deliverables :  </div>
+        <ul class="list-disc text-[#8A8A8A] text-xl  mx-4 lg:mx-8 mt-4 lg:mt-8">
+            <li>A high-fidelity design mockup of the homepage should be designed in Figma. </li>
+            <li class="mt-4">A brief explanation of the design choices and rationale behind the design. </li>
+            <li class="mt-4">A description of how the design meets the requirements outlined in the brief. </li>
+            <li class="mt-4">Please use the content on the current homepage as placeholders. </li>
         </ul>
      </div>
 
@@ -133,7 +133,7 @@
     
     <!--Section 8-->
     <div class="mx-4 mt-12 lg:mx-8 text-xl lg:text-5xl text-[#2274AC] font-bold">What's at stake - Rewards and Prizes?</div>
-    <p class="mx-4 lg:mx-8 text-2xl  text-[#8A8A8A] mt-6">Participation Certificate + Badge + One randomly selected participant will have a chance to get Linkedin 12 months premium voucher or XBox Game Pass!</p>
+    <p class="mx-4 lg:mx-8 text-xl  text-[#8A8A8A] mt-6">Participation Certificate + Badge + One randomly selected participant will have a chance to get Linkedin 12 months premium voucher or XBox Game Pass!</p>
 
     <!--Section 9 cards-->
     <div class="lg:flex flex-row mx-8 lg:mx-auto mt-12">
@@ -142,6 +142,6 @@
         <img src="images/Ui_UxContest_Sec9_card3.svg" alt="" class="mx-auto mt-8 lg:mt-0 sm:h-[30rem] md:h-[30rem] lg:h-[40rem]">
     </div>
 
-    <div class="mx-4 mt-12 mb-12 lg:mx-8 text-[#F64646] text-lg lg:text-2xl">* All the prizes and certificate will be Released Within 35 days after the event is over</div>
+    <div class="mx-4 mt-12 mb-12 lg:mx-8 text-[#F64646] text-lg lg:text-2xl">* All the Prizes and Certificates will be released within 35 days after the event is over.</div>
 </body>
 </html>
